--- a/notebooks/Arbres_J4.ipynb
+++ b/notebooks/Arbres_J4.ipynb
@@ -94,6 +94,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ajout d'un commentaire pour voir l'effet de git sur un notebook\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Ajout d'un commentaire pour voir l'effet de git sur un notebook\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -3532,7 +3549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
