Modification d'un print dans jour 4

--- a/notebooks/Arbres_J4.ipynb
+++ b/notebooks/Arbres_J4.ipynb
@@ -101,12 +101,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ajout d'un commentaire pour voir l'effet de git sur un notebook\n"
+      "Ajout d'un commentaire pour voir l'effet de git sur un notebook, j'ai oublié de faire le diff\n"
      ]
     }
    ],
    "source": [
-    "print(\"Ajout d'un commentaire pour voir l'effet de git sur un notebook\")"
+    "print(\"Ajout d'un commentaire pour voir l'effet de git sur un notebook, j'ai oublié de faire le diff\")"
    ]
   },
   {
